Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-108243

Naming menu separators in design view is broken

    XMLWordPrintable

Details

    • Windows
    • 802684fe23 (qt/qttools/dev) 7174e9d6a6 (qt/qttools/6.4) 7174e9d6a6 (qt/tqtc-qttools/6.4) 802684fe23 (qt/tqtc-qttools/dev)

    Description

      Steps:
      1. Create a menu separator in a window's menu bar in the design view
      2. Set its object name via either the property inspector or directly from the hierarchy view

      Expected: Separator object name updated in hierarchy view, separator object made available as a generated Ui class member.

      Actual: Separator object name is updated in property inspector but remains "separator" in hierarchy view. Separator object is not available as a generated Ui class member.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            kleint Friedemann Kleint
            jasonc Jason Cipriani
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes