Qt Designer: Disable editing separator action names

Separator actions are generated using QMenu::addSeparator();
they are not designable.

Fixes: QTBUG-108243
Change-Id: I0c2141f9703e84cedda72038fcc070386ad00565
Reviewed-by: Jarek Kobus <jaroslaw.kobus@qt.io>
(cherry picked from commit 802684fe2381a17870ad3761de570d2dfcfbdf37)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>